<resources>
    <string name="app_name">Quiz</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="already_have_an_account_sign_in_here">Already Have An Account? Sign in here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t Have An Account? Sign up here</string>

    
    <string name="welcome_you_are_logged_in">Welcome You are logged in</string>
    <string name="logout">logout</string>
    <string name="register">Register</string>
    <string name="_4_out_of_10">4 out of 10</string>
    <string name="score">Score</string>
    <string name="_1_how_did_you_hear_about_us">1. How did you hear about us?</string>
    <string name="advertisements">Advertisements</string>
    <string name="neighbours">Neighbours</string>
    <string name="friends">Friends</string>
    <string name="randomly">Randomly</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="feedback">Feedback</string>
    <string name="amber">Amber</string>
    <string name="start">Start</string>
</resources>